[gd_scene load_steps=37 format=2]

[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death1.png" type="Texture" id=1]
[ext_resource path="res://Sprite/mobs/wizard/spritesheet/wizard.png" type="Texture" id=2]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death2.png" type="Texture" id=3]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death3.png" type="Texture" id=4]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death4.png" type="Texture" id=5]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death5.png" type="Texture" id=6]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death6.png" type="Texture" id=7]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death7.png" type="Texture" id=8]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death8.png" type="Texture" id=9]
[ext_resource path="res://Sprite/mobs/wizard/enemy-death/enemy-death-sprites/enemy-death9.png" type="Texture" id=10]
[ext_resource path="res://Script/wiz_mob.gd" type="Script" id=11]
[ext_resource path="res://Script/mob.gd" type="Script" id=12]

[sub_resource type="PhysicsMaterial" id=25]
friction = 3.0
rough = true

[sub_resource type="CapsuleShape2D" id=17]
radius = 14.0
height = 14.0

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 81, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 162, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 243, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 324, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 405, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 486, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 567, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 648, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 729, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 810, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 891, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 972, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 1053, 0, 81, 66 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 1134, 0, 81, 66 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 7.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "death",
"speed": 8.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "fireball",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=23]
radius = 19.0
height = 12.0

[sub_resource type="Animation" id=20]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "death" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("anim_wizard:playback_speed")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 1.5, 1.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:shoot")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=24]
resource_name = "hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("anim_sprites:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:striked")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:shoot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.929412, 0.337255, 0.337255, 1 ), Color( 0.976471, 0.466667, 0.466667, 1 ), Color( 0.909804, 0.909804, 0.909804, 1 ) ]
}

[sub_resource type="Animation" id=21]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3, 4, 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:shoot")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=22]
resource_name = "shoot"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("anim_sprites:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "fireball" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("anim_sprites:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("anim_wizard:playback_speed")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.5, 1.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:shoot")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CircleShape2D" id=18]
radius = 359.113

[node name="mob" type="Node2D" groups=["save"]]
scale = Vector2( 2, 2 )
script = ExtResource( 12 )

[node name="wizard" type="RigidBody2D" parent="." groups=["mobs"]]
modulate = Color( 1, 0, 0, 1 )
collision_layer = 4
collision_mask = 35
mode = 2
mass = 200.0
physics_material_override = SubResource( 25 )
gravity_scale = 14.13
script = ExtResource( 11 )

[node name="coll_wizard" type="CollisionShape2D" parent="wizard"]
position = Vector2( 0, 13 )
shape = SubResource( 17 )

[node name="anim_sprites" type="AnimatedSprite" parent="wizard"]
frames = SubResource( 16 )
animation = "idle"

[node name="hurtbox" type="Area2D" parent="wizard"]
collision_layer = 4
collision_mask = 33

[node name="coll_hurtbox" type="CollisionShape2D" parent="wizard/hurtbox" groups=["hurtbox"]]
position = Vector2( 0, 13 )
shape = SubResource( 23 )

[node name="shot_speed" type="Timer" parent="wizard"]
process_mode = 0
wait_time = 1.3
one_shot = true

[node name="anim_wizard" type="AnimationPlayer" parent="wizard"]
autoplay = "idle"
reset_on_save = false
playback_speed = 0.9375
anims/death = SubResource( 20 )
anims/hurt = SubResource( 24 )
anims/idle = SubResource( 21 )
anims/shoot = SubResource( 22 )

[node name="area_wizard" type="Area2D" parent="wizard"]
collision_layer = 4
collision_mask = 3
space_override = 2

[node name="coll_area" type="CollisionShape2D" parent="wizard/area_wizard"]
modulate = Color( 0.905882, 0.027451, 0.027451, 1 )
self_modulate = Color( 0.894118, 0.101961, 0.101961, 1 )
position = Vector2( 0, 13 )
shape = SubResource( 18 )

[node name="aiming" type="Node2D" parent="wizard"]
position = Vector2( 0, 13 )

[node name="aim1" type="RayCast2D" parent="wizard/aiming"]
enabled = true
collision_mask = 3

[node name="aim2" type="RayCast2D" parent="wizard/aiming"]
rotation = 0.256999
enabled = true
collision_mask = 3

[node name="aim3" type="RayCast2D" parent="wizard/aiming"]
rotation = -0.25695
enabled = true
collision_mask = 3

[connection signal="area_entered" from="wizard/hurtbox" to="." method="_on_hurtbox_area_entered"]
